// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDropdownLabel renders correctly when isHidden is true 1`] = `
<div>
  <div
    class="text-white-mode1 flex flex-none cursor-pointer items-center gap-[7px] text-sm font-medium whitespace-nowrap pointer-events-none p-1 opacity-0"
  >
    <div>
      ArrowDownIcon
    </div>
    <div>
      MenuDropdownItem
    </div>
  </div>
</div>
`;

exports[`MenuDropdownLabel renders correctly when isOpen is false 1`] = `
<div>
  <div
    class="text-white-mode1 flex flex-none cursor-pointer items-center gap-[7px] text-sm font-medium whitespace-nowrap "
  >
    <div>
      ArrowDownIcon
    </div>
    <div>
      MenuDropdownItem
    </div>
  </div>
</div>
`;

exports[`MenuDropdownLabel renders correctly when isOpen is true 1`] = `
<div>
  <div
    class="text-white-mode1 flex flex-none cursor-pointer items-center gap-[7px] text-sm font-medium whitespace-nowrap "
  >
    <div>
      ArrowUpIcon
    </div>
    <div>
      MenuDropdownItem
    </div>
  </div>
</div>
`;
